@startuml

title Design Level Class Diagram for Interaction Subdomain

package "Report Subdomain" {

    class ReportController {
        + getAllReports() : Flux<ReportResponseModel>
        + getReport(dateRange: Mono<String>) : Mono<ResponseEntity<ReportResponseModel>>
    }

    class ReportService {
        + getAllReports(readerId: String) : Flux<SaveResponseModel>
        + getReport(dateRange: Mono<String>) : Mono<ReportResponseModel>
    }

    class ReportRepository {
        + save(report: Report) : Report
        + findReportByReportId(reportId: String) : Mono<Report>
    }

    class Report {
        - id: String
        - reportId: ReportIdentifier
        - timestamp: LocalDateTime
        - content: ArticleIdentifier
    }

    class ReportResponseModel {
        - reportId: ReportIdentifier
        - timestamp: LocalDateTime
        - content: ArticleIdentifier
    }

    ReportController --> ReportService
    ReportService --> ReportRepository
    ReportRepository --> Report
    Report --> ReportResponseModel
}

@enduml
